Fix badge border on Safari

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -930,6 +930,11 @@ input[type='text'] {
   }
 }
 
+.badge-contain{
+  position: relative;
+}
+
+
 .badge-Details {
   float: left;
   width: 50%;
